--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -151,7 +151,7 @@ body {
 }*/
 
 main {
-    padding: 0.5em;
+    padding: 5em;
 }
 
 input {
@@ -213,4 +213,9 @@ ul.cardarea {
 
 ul.cardarea li {
     display: inline;
+}
+
+.uml {
+    display: flex;
+    justify-content: space-around;
 }
