--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -18,11 +18,37 @@
     </ul>
 
     <h2 id="kmom01">Kmom01</h2>
-    <p>This is the report text for Kmom01.</p>
+    <p><em>Berätta kort om dina förkunskaper och tidigare erfarenheter kring objektorientering.</em></p>
+    <p>- Jag hade et ganska bra erfarenhet med objektorientering, så att jobbade lite inom Javascript kursen och sedan jobbade mer inom oopython kursen.</p>
+    <p><em>Berätta kort om PHPs modell för klasser och objekt. Vilka är de grunder man behöver veta/förstå för att kunna komma igång och skapa sina första klasser?</em></p>
+    <p>- Jag ser att man bör se, läsa och göra själv classer, så att med tiden man blir bättre och bättre.</p>
+    <p><em>Reflektera kort över den kodbas, koden, strukturen som användes till uppgiften me/report, hur uppfattar du den?</em></p>
+    <p>- I PHP-kontrollern hanteras routes kopplade till TWIG-templates, och inkluderar metoder och instanser av klasser. Denna struktur underlättar funktionaliteten i kodbasen genom att hantera inkommande förfrågningar, bearbeta dem med lämpliga metoder och klasser, och slutligen rendera dynamiskt innehåll med hjälp av TWIG-templates.</p>
+    <p><em>Med tanke på artikeln “PHP The Right Way”, vilka delar in den finner du extra intressanta och värdefulla? Är det några särskilda områden som du känner att du vill veta mer om? Lyft fram några delar av artikeln som du känner mer värdefulla.</em></p>
+    <p>- Dependency Inversion Principle är ett mycket spännande koncept som jag har upptäckt och lärt mig mer och mer om, särskilt inom området för Dependency Injection. Det är verkligen en grundläggande princip som hjälper till att skapa löst kopplade och modulära system.</p>
+    <p><em>Vilken är din TIL för detta kmom?</em></p>
+    <p>- Min TIL till detta kmomen är att man ska läsa oerhört mychet och lär sig mycket specielt på början av kursen. Men sedan man ska förstå allt och man bli bättre och nöjd</p>
+
     <h2 id="kmom02">Kmom02</h2>
-    <p>This is the report text for Kmom02.</p>
+    <p><em>Förklara kort de objektorienterade konstruktionerna arv, komposition, interface och trait och hur de används i PHP.</em></p>
+    <p>- Arv är en grundläggande princip inom objektorienterad programmering där en klass kan ärva egenskaper och metoder från en annan klass.</p>
+    <p>- Komposition är en designprincip där objekt skapas genom att kombinera andra objekt. Istället för att ärva från en annan klass kan en klass innehålla instanser av andra klasser.</p>
+    <p>- Ett interface är en samling av metoder som en klass måste implementera. Det tillåter dig att definiera ett kontrakt för hur olika klasser ska bete sig utan att specificera detaljerna för implementeringen.</p>
+    <p>- Ett trait är en sätt att återanvända metoder i flera klasser. Det tillåter dig att inkludera metoder i en klass utan att använda arv.</p>
+    <p><em>Berätta om din implementation från uppgiften. Hur löste du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential ser du i din koden och dina klasser?</em></p>
+    <p>- Jag fick svårigheter under upgiften men provade jag några gånger och ändrade väldig många gånger. Den svåraste var när jag försökte planera classerna så att det var lite svårt i början men sedan kände jag mig blev bättre och började jag skapa methoder och anropa dem och koden var väldigt organiserad och det därför blev jag oerhört nöjd och lärt mig väldigt mycket och classerna, Symfony, och Dependendency injection, och inversion principle. Men man kan väl göra förbättringar på classerna och kan de bli mer organiserad.</p>
+    <p><em>Vilka är dina reflektioner så här långt med att jobb i Symfony med applikationskod enligt MVC?</em></p>
+    <p>- Jag känner att Symfony är väldigt viktig Framework så att det är Ful-stack framework, och det är väldigt bra när man hanterar complecerad projekter.</p>
+    <p><em>Vilken är din TIL för detta kmom?</em></p>
+    <p>- Min TIL till detta kmom är att surfa och lära allt som möjligt även om tog lång tid. Exakt som jag har djort när det kom till Dependency injection och inversion. </p>
+
     <h2 id="kmom03">Kmom03</h2>
-    <p>This is the report text for Kmom03.</p>
+    <p><em>Berätta hur det kändes att modellera ett kortspel med flödesdiagram och psuedokod. Var det något som du tror stödjer dig i din problemlösning och tankearbete för att strukturera koden kring en applikation?</em></p>
+    <p></p>
+    <p><em>Berätta om din implementation från uppgiften. Hur löste du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential ser du i din koden, dina klasser och applikationen som helhet?</em></p>
+    <p><em>Vilken är din känsla för att koda i ett ramverk som Symfony, så här långt in i kursen?</em></p>
+    <p><em>Vilken är din TIL för detta kmom?</em></p>
+
     <h2 id="kmom04">Kmom04</h2>
     <p>This is the report text for Kmom04.</p>
     <h2 id="kmom05">Kmom05</h2>
