--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -218,7 +218,24 @@ ul.cardarea li {
   display: inline;
 }
 
+.doc-images {
+  display: flex;
+  justify-content: center;
+}
+
 .uml {
   display: flex;
   justify-content: space-around;
+}
+
+.psuedo {
+  display: flex;
+  justify-content: space-around;
+  height: 500px;
+  width: 250px;
+  padding: 10px;
+}
+
+.classes {
+  padding: 10px;
 }
