--- a/templates/api.html.twig
+++ b/templates/api.html.twig
@@ -15,5 +15,7 @@
         <li><a href="{{ path('card_deck_shuffle') }}">/card/deck/shuffle</a> - Card deck shuffle page </li>
         <li><a href="{{ path('card_deck_draw') }}">/card/deck/draw</a> - Card deck draw page </li>
         <li><a href="{{ path('card_deck_draw') }}">/card/deck/draw/:num</a> - Card deck draw number page </li>
+        {# kmom03 #}
+        <li><a href="{{ path('api_game') }}">/api/game</a> - Game status </li>
     </ul>
 {% endblock %}
