--- a/templates/cards/carddeckdrawnum.html.twig
+++ b/templates/cards/carddeckdrawnum.html.twig
@@ -6,7 +6,8 @@
     <h1>Random Card</h1>
     <ul class="cardarea">
         {% for suit in randomCard %}
-            {% for card in suit %}
+            {% set cards = suit|split('') %}
+            {% for card in cards %}
                 {% set codePoint = card|unicode_code_point %}
                 {% if codePoint >= 127153 and codePoint <= 127183 %}
                     <li><span class="card-red">{{ card }}</span></li>
@@ -15,7 +16,7 @@
                 {% endif %}
                 {# {{ dump(card) }} #}
             {% endfor %}
-            {# {{ dump(suit) }} #}
+            {{ dump(randomCard) }}
         {% endfor %}
     </ul>
     {{ remainedCardsQuantity }}
