--- a/templates/cards/test/carddeck.html.twig
+++ b/templates/cards/test/carddeck.html.twig
@@ -16,6 +16,7 @@
                 {% endif %}
             {% endfor %}
             {{ dump(suit) }}
+            {{ dump(cardsSuits) }}
         {% endfor %}
     </ul>
 {% endblock %}
