kmom02,kmom03 try3

--- a/templates/api.html.twig
+++ b/templates/api.html.twig
@@ -11,10 +11,10 @@
         <li><a href="{{ path('session_display') }}">/session</a> - Session page</li>
         <li><a href="{{ path('session_delete') }}">/session/delete</a> - Session delete</li>
         <li><a href="{{ path('card') }}">/card</a> - Card page </li>
-        <li><a href="{{ path('card_deck') }}">/card/deck</a> - Card deck page </li>
-        <li><a href="{{ path('card_deck_shuffle') }}">/card/deck/shuffle</a> - Card deck shuffle page </li>
-        <li><a href="{{ path('card_deck_draw') }}">/card/deck/draw</a> - Card deck draw page </li>
-        <li><a href="{{ path('card_deck_draw') }}">/card/deck/draw/:num</a> - Card deck draw number page </li>
+        <li><a href="{{ path('api_deck') }}">/api/deck</a> - Api deck page </li>
+        <li><a href="{{ path('api_deck_shuffle') }}">/api/deck/shuffle</a> - Api deck shuffle page </li>
+        <li><a href="{{ path('api_deck_draw') }}">/api/deck/draw</a> - Api deck draw page </li>
+        <li><a href="{{ path('api_deck_draw') }}">/api/deck/draw/:num</a> - Api deck draw number page </li>
         {# kmom03 #}
         <li><a href="{{ path('api_game') }}">/api/game</a> - Game status </li>
     </ul>
