--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
                 <li><a href="{{ path('report') }}">Report</a></li>
                 <li><a href="{{ path('card') }}">Card</a></li>
                 <li><a href="{{ path('api') }}">Api</a></li>
-                <li><a href="{{ path('game') }}">Game</a></li>
+                <li><a href="{{ path('game_intro') }}">Game</a></li>
             </ul>
         </nav>
 
