--- a/templates/game/gamecarddeckdraw.html.twig
+++ b/templates/game/gamecarddeckdraw.html.twig
@@ -3,11 +3,10 @@
 {% block title %}Random Card{% endblock %}
 
 {% block main %}
-    <h1>Random Card</h1>
-    <h2>Player's turn</h2>
+    <h1>{{ turn }}</h1>
+    <h2>Player's Hand</h2>
     <ul class="cardarea">
-        {% for suit in randomCard %}
-            {# {% set cards = suit|split('') %} #}
+        {% for suit in playerRandomCard %}
             {% for card in suit %}
                 {% set codePoint = card|unicode_code_point %}
                 {% if codePoint >= 127153 and codePoint <= 127183 %}
@@ -15,24 +14,44 @@
                 {% else %}
                     <li><span class="card">{{ card }}</span></li><br>
                 {% endif %}
-                {# {{ dump(card) }} #}
             {% endfor %}
-            {# {{ dump(cards) }} #}
         {% endfor %}
     </ul>
 
-    {% if not disableDrawButton %}
-    <form action="{{ path('game_card_draw') }}" method="post">
-        <input type="submit" name="draw_card" value="Draw another Card">
-    </form>
+    {% if playerTurn or not playerTurn %}
+        <p>Player's Points: {{ playerPoints }}</p>
+    {% endif %}
+    {% if playerTurn %}
+        <form action="{{ path('game_card_draw') }}" method="post">
+            <input type="submit" name="draw_card" value="Draw another Card">
+        </form>
+        <form action="{{ path('game_card_stop') }}" method="post">
+            <input type="submit" name="stop" value="Stop">
+        </form>
     {% endif %}
 
-    <form action="{{ path('game_card_stop') }}" method="post">
-        <input type="submit" name="stop" value="Stop">
-    </form>
+    <h2>Bank's Hand</h2>
+    <ul class="cardarea">
+        {% if not playerTurn %}
+            {% for suit in bankRandomCard %}
+                {% for card in suit %}
+                    {% set codePoint = card|unicode_code_point %}
+                    {% if codePoint >= 127153 and codePoint <= 127183 %}
+                        <li><span class="card-red">{{ card }}</span></li><br>
+                    {% else %}
+                        <li><span class="card">{{ card }}</span></li><br>
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
+    </ul>
 
-    {# {{ remainedCardsQuantity }} #}
-    <p>{{ playerPoints }}</p>
-    {# <p>{{ dump(playerPoints) }}</p> #}
+    {% if not playerTurn %}
+        <p>Bank's Points: {{ bankPoints }}</p>
+        <form action="{{ path('game_card_results') }}" method="post">
+            <input type="submit" name="results" value="Results">
+        </form>
+    {% endif %}
+
     {{ include('flash.html.twig') }}
 {% endblock %}
