unified twig template

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -44,10 +44,13 @@
 
     <h2 id="kmom03">Kmom03</h2>
     <p><em>Berätta hur det kändes att modellera ett kortspel med flödesdiagram och psuedokod. Var det något som du tror stödjer dig i din problemlösning och tankearbete för att strukturera koden kring en applikation?</em></p>
-    <p></p>
+    <p> Det var sännande att modellera spelet med flödesdiagram och psuedokod så att lärde jag mig hur man gör dem, jag tycker att fe är väldigt viktiga och underlättar kods förståelse samt tankearbete för att strukturera koden.</p>
     <p><em>Berätta om din implementation från uppgiften. Hur löste du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential ser du i din koden, dina klasser och applikationen som helhet?</em></p>
+    <p>Jag skapade classer med methoder som hjälpte mig med att display, calculate, valuate ...etc cards, cards Hand, and game. Sedan fotsatt jag inom Controllerna tog emot datan och set, get av session och skicka till twig templates. Man kan göra lite förbättningar på classerna på Backend för att minska mer data av twig templates på front-end.   </p>
     <p><em>Vilken är din känsla för att koda i ett ramverk som Symfony, så här långt in i kursen?</em></p>
+    <p>Jag känner mig väldigt bättre med Object-Orianted, Sessions, Routes and frameworks.</p>
     <p><em>Vilken är din TIL för detta kmom?</em></p>
+    <p>Min TIL for detta kmom är att det är Crucial att man förstå koden och leka så mycket som möjligt för att bli bättre.</p>
 
     <h2 id="kmom04">Kmom04</h2>
     <p>This is the report text for Kmom04.</p>
