Update after redovisning

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -67,7 +67,40 @@
     <p> Min TIL är att fokusera på att skriva enkla specifika classer och metoder så mycket som möjligt så är det bättre när man skriver flera specifika methoder och classer.</p>
 
     <h2 id="kmom05">Kmom05</h2>
-    <p>This is the report text for Kmom05.</p>
+    <p><b>Krav:</b></p>
+    <ol>
+        <li><p><em>Gick det bra att jobba igenom övningen med Symfony och Doctrine. Något särskilt du tänkte/reagerade på under övningen?</em></p></li>
+        <li><p><em>Berätta om din applikation och hur du tänkte när du byggde upp den. Tänkte du något speciellt på användargränssnittet?</em></p></p></li>
+        <li><p><em>Gick det bra att jobba med ORM i CRUD eller vad anser du om det, jämför gärna med andra sätt att jobba med databaser?</em></p></li>
+        <li><p><em>Vad är din uppfattning om ORM så här långt och relatera gärna till andra sätt att jobba med applikationskod mot databaser?</em></p></li>
+        <li><p><em>Vilken är din TIL för detta kmom?</em></p></li>
+    </ol>
+
+    <p><b>Svar:</b></p>
+    <ol>
+        <li>
+            <p>Det det bra att jobba igenom övningen med Symfony och Doctrine. Därtill fick jag svårigheter i början men sedan förstood jag allt och blev smidigt.</p>
+            <p>Jag tänkte att kolla mer och försöka förstå lite mer om sqlite och jämförde detta med mysql som jobbade jag redan inom databas kursen. Därtill fick jag att sqlite skappa fil.db inom projekts miljö som en databas medan mysql var DBMS som sprade databasen på server (Mariadb).</p>
+            <p>Och sedan jobbade jag med övningen och skapade database samt med entities och jobbade med ORM vilket var spännande.</p>
+        </li>
+        <li>
+            <p>Jag började med att planera så att tänkte att jag ska behöva skapa book entity med flera properties för att implementera library och visa upp böcker på sidan, samt göra CRUD.</p>
+            <p>Jag tänkte att styla buttons och visa upp böcker inom table för att förbättra UI och görde sidan lätt att använda och nå till alla saker som man behöver göra och så man får väldigt bra UX .</p>
+        </li>
+        <li>
+            <p>Det var väldigt spännande att jobba med ORM så att det var min första gång jobbar med detta eller liknande. Därtill var det smedigt och användbar att göra CRUD och forms och så ändrar man databsen.</p>
+            <p>ORM-system erbjuder en högnivåabstraktion för att arbeta med databaser och erbjuder enkelhet, produktivitet och databasagnosticism till priset av prestandaöverhäng och begränsad kontroll. Att arbeta direkt med en databas utan ORM ger utvecklare full kontroll över databasinteraktioner och potentiellt bättre prestanda, men kräver mer erfarenhet och kan vara mer komplicerat och beroende av databasen.</p> 
+            <p>Valet mellan att använda en ORM och att arbeta utan en beror på faktorer som projektbehov, utvecklarexpertis och prestandaöverväganden. </p>
+        </li>
+        <li>
+            <p>När vi jobbade inom databas kurs så brukade sätta kunnektions Config och skapa en konnektion till databasen och skicka SQL query inom JavaScript kod.</p>
+            <p>Medan med ORM är det lättare så att behöver vi inte implementera SQl query och skapa anslutning till databasen, utan att vi kan göra SQL query direkt till SQLite med Terminal och så för vi automatiskt Classer och Reposotories (som handlar service entity (SELECT  queries)).</p>
+            <p>Så min uppfattning om ORM är övervägande positiv. Det erbjuder en praktisk abstraktion som gör det enklare att arbeta med databaser genom att möjliggöra användning av objektorienterade modeller istället för att skriva SQL-frågor direkt. Detta kan leda till ökad produktivitet och minskad kodupprepning, särskilt när man hanterar en mängd olika databastabeller och relationer så kan man byta databassystem utan att behöva göra stora ändringar i kodbasen.</p>
+            <p>Med det sagt finns det situationer där att arbeta direkt med databasen utan användning av ORM kan vara fördelaktigt. Till exempel när du behöver optimera prestanda eller skriva komplexa SQL-frågor som inte stöds av ORM:en. I vissa fall kan att skriva rå SQL ge bättre prestanda och ökad flexibilitet.</p>
+        </li>
+        <li><p>Min TIL till detta kmom att man ska ge tid till nya info och concepts som lär sig, söka mycket för att lära så mycket som möjligt. Och så ska man bli väldigt bättre med tid. </p></li>
+    </ol>
+
     <h2 id="kmom06">Kmom06</h2>
     <p>This is the report text for Kmom06.</p>
     <h2 id="kmom07">Kmom07</h2>
