After refactoring the classes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,7 @@
                 <li><a href="{{ path('api') }}">Api</a></li>
                 <li><a href="{{ path('game_intro') }}">Game</a></li>
                 <li><a href="{{ path('app_library') }}">Library</a></li>
+                <li><a href="{{ path('metrics_page') }}">Metrics</a></li>
             </ul>
         </nav>
 
