After test modifying

--- a/templates/analyses/metrics.html.twig
+++ b/templates/analyses/metrics.html.twig
@@ -16,7 +16,8 @@
     <h2 id="introduktion">Introduktion</h2>
     <h5>De sex C:na är sex princepler som man kan följa för att förbättra och en ren kod. De är:</h5>
     <ul>
-        <li>Cohesion</li>
+        <li>Cohesion:</li>
+        <p>Det </p>
         <li>Code Style</li>
         <li>Coverage</li>
         <li>Coupling</li>
