--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -13,7 +13,6 @@
         <li><a href="#kmom04">Kmom04</a></li>
         <li><a href="#kmom05">Kmom05</a></li>
         <li><a href="#kmom06">Kmom06</a></li>
-        <li><a href="#kmom07">Kmom07</a></li>
         <li><a href="#kmom10">Kmom10</a></li>
     </ul>
 
@@ -102,9 +101,37 @@
     </ol>
 
     <h2 id="kmom06">Kmom06</h2>
-    <p>This is the report text for Kmom06.</p>
-    <h2 id="kmom07">Kmom07</h2>
-    <p>This is the report text for Kmom07.</p>
+        <p><b>Krav:</b></p>
+    <ol>
+        <li><p><em>Hur uppfattade du verktyget phpmetrics och fann du några särskilda bitar mer värdefulla än andra? Var det några särskilda metrics eller bilder du uppskattade?</em></p></li>
+        <li><p><em>Berätta hur det gick att integrera med Scrutinizer och vilken är din första känsla av verktyget och dess badges? Vilken kodtäckning och kodkvalitet fick du efter första bygget?</em></p></p></li>
+        <li><p><em>Hur är din egen syn på kodkvalitet, berätta lite om den? Tror du man kan man påvisa kodkvalitet i någon viss mån med badges eller vad tror du?</em></p></li>
+        <li><p><em>Vilken är din TIL för detta kmom?</em></p></li>
+    </ol>
+
+    <p><b>Svar:</b></p>
+    <ol>
+        <li>
+            <p>Jag ser phpmetrics som ett oerhört värdefullt verktyg eftersom det presenterar flera mätningar och aspekter som gör det möjligt att analysera olika delar av koden för att uppnå ren och underhållbar kod. Bland de många mätningarna tycker jag att följande är särskilt värdefulla:</p>
+            <p>Maintainability: Denna mätning hjälper till att identifiera hur lätt det är att underhålla och vidareutveckla koden, vilket är avgörande för långsiktig hållbarhet.</p>
+            <p>Complexity: Genom att analysera komplexiteten i koden kan man identifiera potentiella problemområden som kan leda till buggar och svårigheter vid vidareutveckling.</p>
+            <p>Coupling: Detta mått är viktigt för att förstå graden av beroenden mellan olika delar av koden. Låg koppling bidrar till att göra koden mer modulär och lättare att underhålla.</p>
+            <p>Utöver dessa mätningar uppskattade jag också de grafiska representationerna som phpmetrics erbjuder. De visuella bilderna och diagrammen ger en tydlig översikt över kodbasens hälsa och struktur, vilket gör det lättare att snabbt identifiera och åtgärda problemområden.</p>
+        </li>
+        <li>
+            <p>Till en början tyckte jag att Scrutinizer verkade lite konstigt och komplicerat, men snart insåg jag att det är ett oerhört professionellt verktyg för statisk analys och Continuous Integration (CI). Scrutinizer testar och mäter nästan alla aspekter av koden, vilket hjälper till på ett mycket bra sätt att fixa och förbättra koden.</p>
+            <p>Vid första bygget gick det inte så bra eftersom jag gjorde något felaktigt. Men efter att hade försökt igen, fick jag bygget att passera. Resultaten blev 15% kodtäckning och en kodkvalitetsbetyg på 6.68.</p>
+            <p>Min första känsla av Scrutinizer och dess badges är att de ger en tydlig och motiverande översikt av kodens kvalitet och täckning. Verktyget identifierar specifika områden som behöver förbättras och erbjuder insikter som är mycket användbara för att säkerställa att koden är robust och underhållbar. Med hjälp av Scrutinizer kan man kontinuerligt övervaka och förbättra kodbasen, vilket leder till högre kvalitet och mer reliable software.</p>
+        </li>
+        <li>
+            <p>Jag tycker att kodkvalitet är oerhört viktig. Genom att följa etablerade standarder och skriva välstrukturerad och läsbar kod kan programmerare säkerställa att koden är lätt att förstå och underhålla. God kodkvalitet bidrar till att program fungerar på ett tillförlitligt sätt, minskar antalet fel och buggar, och förbättrar utvecklingsprocesserna över tid. Det skapar också en gemensam grund för samarbete, där alla i teamet kan förstå och arbeta med koden effektivt.</p>
+            <p>Självklart kan man påvisa kodkvalitet med hjälp av badges. Dessa badges fungerar som synliga indikatorer som länkar till resultat från Scrutinizer verktyg. Dessutom, ger de en snabb överblick över kodens kvalitet, och kan vara mycket motiverande för utvecklingsteam att sträva efter högre standarder. Badges visar också för andra utvecklare och intressenter att projektet upprätthåller god kodkvalitet och kontinuerligt arbetar för att förbättra den.</p>
+        </li>
+        <li>
+            <p>Min TIL för detta kmom är att fokusera på detaljerna och att verkligen ta till sig den värdefulla informationen och de olika aspekterna kring att köra och analysera kod. Det är viktigt att inte bara förstå hur verktygen fungerar, utan också varför de är viktiga och hur de kan användas för att förbättra kodkvaliteten. Genom att göra detta kommer man lär sig mycket om hur man skriver mer robust och underhållbar kod, samt hur man identifierar och åtgärdar potentiella problem tidigt i utvecklingsprocessen.</p>
+        </li>
+    </ol>
+
     <h2 id="kmom10">Kmom10</h2>
     <p>This is the report text for Kmom10.</p>
 
